--- a/.github/workflows/build-and-upload-jar.yml
+++ b/.github/workflows/build-and-upload-jar.yml
@@ -21,11 +21,15 @@ jobs:
 
       - name: Build JAR
         run: |
-          ./gradlew clean build
+          # Compile your Java project
+          javac -d out src/*.java
+          
+          # Create JAR file
+          jar cvf TicTacToe_Group_G.jar -C out/ .
 
       - name: Upload JAR to GitHub Releases
         if: github.ref == 'refs/heads/master'
         uses: actions/upload-artifact@v2
         with:
           name: TicTacToe_Group_G.jar
-          path: out/artifacts/TicTacToe_Group_G_jar/TicTacToe_Group_G.jar
+          path: TicTacToe_Group_G.jar
